curl: transfer hangs in case connection was cut between client and server

https://bugzilla.gnome.org/show_bug.cgi?id=774485